// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input 组件测试 InputAdornment 1`] = `
<DocumentFragment>
  <div
    class="t-input-adornment t-input-adornment--prepend"
  >
    <span
      class="t-input-adornment__prepend"
    >
      http://
    </span>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-align-left t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入内容"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 clearable 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
        value="24/05/2020"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 maxLength 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default"
    >
      <input
        class="t-input__inner"
        maxlength="3"
        placeholder="请输入内容"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 prefixIcon is function 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default t-input--prefix"
    >
      <span
        class="t-input__prefix t-input__prefix-icon"
      >
        <span>
          prefixIcon
        </span>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input 组件测试 prefixIcon suffixIcon 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix t-input__prefix-icon"
      >
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="password"
        value=""
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`addon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend"
      >
        <span
          class="t-input-adornment__prepend"
        >
          http://
        </span>
        <div
          class="t-input__wrap"
          value=""
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入域名"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend t-input-adornment--append"
      >
        <span
          class="t-input-adornment__prepend"
        >
          http://
        </span>
        <div
          class="t-input__wrap"
          value=""
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入域名"
              type="text"
              value=""
            />
          </div>
        </div>
        <span
          class="t-input-adornment__append"
        >
          .com
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`align.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="居左对齐"
          />
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-size-m t-align-center t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="居中对齐"
          />
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-size-m t-align-right t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="居右对齐"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`auto-width.jsx 1`] = `
<DocumentFragment>
  <div
    style="max-width: 500px;"
  >
    <div
      class="t-input__wrap t-input--auto-width"
    >
      <div
        class="t-input t-size-m t-align-left t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="宽度自适应"
        />
        <span
          class="t-input__input-pre"
        >
          宽度自适应
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px; width: 500px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入内容（无默认值）"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
        value="Welcome to TDesign"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入内容（有默认值）"
            type="text"
            value="Welcome to TDesign"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`clearable.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
    value="Hello TDesign"
  >
    <div
      class="t-input t-size-m t-align-left t-is-default"
    >
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
        value="Hello TDesign"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-disabled t-size-m t-align-left t-is-default"
    >
      <input
        class="t-input__inner"
        disabled=""
        placeholder="请输入"
        type="text"
        value="禁用状态"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`format.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
    value=""
  >
    <div
      class="t-input t-size-m t-align-left"
    >
      <input
        class="t-input__inner"
        placeholder="请输入数字"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-group t-input-group--separate"
      >
        <div
          class="t-input__wrap"
          style="width: 100px;"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="0731"
            />
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="12345677"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-group t-input-group--separate"
      >
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-group t-input-group--separate"
      >
        <div
          class="t-input__wrap"
          style="width: 100px;"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="0731"
            />
          </div>
        </div>
        <span
          style="line-height: 32px;"
        >
           - 
        </span>
        <div
          class="t-input__wrap"
          style="width: 100px;"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="12345"
            />
          </div>
        </div>
        <div
          class="t-input__wrap"
          style="width: 100px;"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="678901"
            />
          </div>
        </div>
        <div
          class="t-input__wrap"
          style="width: 100px;"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`max-length-count.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
    value=""
  >
    <div
      class="t-input t-size-m t-align-left t-is-default t-input--suffix"
    >
      <input
        class="t-input__inner"
        maxlength="5"
        placeholder="请输入"
        type="text"
        value=""
      />
      <div
        class="t-input__suffix"
      >
        0/5
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`password.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <span
            class="t-input__prefix t-input__prefix-icon"
          >
            <svg
              class="t-icon t-icon-lock-on"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6 10v1h4v-1H6z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="password"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-browse-off t-input__suffix-clear"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <span
            class="t-input__prefix t-input__prefix-icon"
          >
            <svg
              class="t-icon t-icon-lock-on"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6 10v1h4v-1H6z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="password"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-browse-off t-input__suffix-clear"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px; width: 500px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-size-l t-align-left t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入内容"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-size-m t-align-left t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入内容"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`status.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 50px; width: 500px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-vertical"
        style="gap: 16px; width: 100%;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-is-disabled t-size-m t-align-left t-is-default"
            >
              <input
                class="t-input__inner"
                disabled=""
                placeholder="禁用状态"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default"
            >
              <input
                class="t-input__inner"
                placeholder="只读状态"
                readonly=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-vertical"
        style="gap: 16px; width: 100%;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-success"
            >
              <input
                class="t-input__inner"
                placeholder="成功状态"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-warning"
            >
              <input
                class="t-input__inner"
                placeholder="警告状态"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-error"
            >
              <input
                class="t-input__inner"
                placeholder="错误状态"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-vertical"
        style="gap: 16px; width: 100%;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-default"
            >
              <input
                class="t-input__inner"
                placeholder="普通状态"
                type="text"
                value=""
              />
            </div>
            <div
              class="t-input__tips t-input__tips--default"
            >
              这是普通文本提示
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-success"
            >
              <input
                class="t-input__inner"
                placeholder="成功状态"
                type="text"
                value=""
              />
            </div>
            <div
              class="t-input__tips t-input__tips--success"
            >
              校验通过文本提示
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-warning"
            >
              <input
                class="t-input__inner"
                placeholder="警告状态"
                type="text"
                value=""
              />
            </div>
            <div
              class="t-input__tips t-input__tips--warning"
            >
              校验不通过文本提示
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-error"
            >
              <input
                class="t-input__inner"
                placeholder="错误状态"
                type="text"
                value=""
              />
            </div>
            <div
              class="t-input__tips t-input__tips--error"
            >
              校验存在严重问题文本提示
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textarea.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input__wrap"
    value=""
  >
    <div
      class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix t-input__prefix-icon"
      >
        <svg
          class="t-icon t-icon-search"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
        value=""
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
